examples/nginx-with-php.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-php
spec:
  containers:
    - name: fpm
      image: php:fpm
      resources:
        limits:
          cpu: 500m
          memory: 500M
    - name: nginx
      image: nginx:latest
      resources:
        limits:
          cpu: 500m
          memory: 500M
