examples/nginx-with-secret-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        limits:
          cpu: 500m
          memory: 500M
      volumeMounts:
        - name: secrets-data
          mountPath: /var/secrets
          readOnly: true
  volumes:
    - name: secrets-data
      secret:
        secretName: opaque-secret
