examples/ssh-mount-path.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ssh-volume
spec:
  containers:
    - name: ssh
      image: circleci/sshd:0.1.53-8ca6ee3
      resources:
        limits:
          cpu: 500m
          memory: 500M
      volumeMounts:
        - mountPath: /mnt/data
          name: mountpath
          readOnly: true

  volumes:
    - name: mountpath
      hostPath:
        path: /tmp/data
    - name: mounttmp
      hostPath:
        path: /tmp
