examples/ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-utils
spec:
  containers:
    - name: ubuntu
      image: ubuntu:latest
      command:
        - sleep
        - "infinity"
