examples/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-clusterip
spec:
  type: ClusterIP
  selector:
    name: nginx
  ports:
    - port: 80
      targetPort: 80
