examples/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  labels:
    name: example-service
spec:
  type: ExternalName
  externalName: ifconfig.me
  ports:
    - port: 80
