examples/service-nginx-headless-ipcluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    name: nginx
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
