examples/service-nginx-nodeport-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  containers:
    - name: whoami
      image: containous/whoami
      resources:
        limits:
          cpu: 500m
          memory: 500M
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: ngonx
  labels:
    name: nginx
spec:
  containers:
    - name: whoami
      image: containous/whoami
      resources:
        limits:
          cpu: 500m
          memory: 500M
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    name: nginx
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30001
